a11y color contrast issues and content updates

--- a/assets/css/tailwind-output.css
+++ b/assets/css/tailwind-output.css
@@ -77,6 +77,9 @@ a {
   background-color: transparent;
 }
 
+p a { text-decoration: underline;}
+p a:hover {text-decoration: none;}
+
 /**
  * 1. Remove the bottom border in Chrome 57-
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
